--- a/appsec.properties
+++ b/appsec.properties
@@ -4,6 +4,7 @@ dev_team_lead = cpasquini@gozego.com
 security_champion = cpasquini@gozeg.com
 exec_lead= csnyder@gozego.com
 observers = gnyrkkanen@gozego.com, nrediehs@gozego.com
+prod_branch = N/A
 prod_urls = N/A
 qa_urls = N/A
 dev_urls = N/A
