--- a/appsec.properties
+++ b/appsec.properties
@@ -1,5 +1,5 @@
 #file format: https://en.wikipedia.org/wiki/.properties
-application_id = N/A
+application_id = nonprod
 dev_team_lead = cpasquini@gozego.com
 security_champion = cpasquini@gozeg.com
 exec_lead= csnyder@gozego.com
